3rd commit (added animation, used room_database, swipeLeftRight, no toolbarMenu)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#00FFFFFF" />
+                    android:background="@android:color/transparent" />
 
                 <TextView
                     android:id="@+id/app_name"
@@ -62,7 +62,10 @@
                     app:layout_constraintStart_toEndOf="@id/app_name"
                     app:layout_constraintTop_toTopOf="@id/app_name" />
 
+
                 <ImageButton
+
+                    android:id="@+id/menu_button"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="8dp"
