--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -63,6 +63,7 @@
                     app:layout_constraintTop_toTopOf="@id/app_name" />
 
                 <ImageButton
+                    android:id="@+id/menu_button"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="8dp"
