--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="yellow">#FFC107</color>
     <color name="blue">#43C3FF</color>
+    <color name="red">#C52929</color>
+    <color name="gray">#8D8D8D</color>
 </resources>
