--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,10 +135,10 @@
             android:scaleType="centerCrop"
             android:src="@drawable/dialog_background"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@id/dialog2" />
+            app:layout_constraintTop_toTopOf="@id/dialog_container2" />
 
         <LinearLayout
-            android:id="@+id/dialog2"
+            android:id="@+id/dialog_container2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
