update: 1. added small lottie 2. "kotlin-android-extensions" plugin is replaced by viewBinding 3. deleted .idea directory

--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -24,7 +24,7 @@
             android:paddingBottom="8dp">
 
             <CheckBox
-                android:id="@id/checkbox"
+                android:id="@+id/checkbox"
                 android:layout_width="35dp"
                 android:layout_height="30dp"
                 android:checked="false"
